# test-receiver-dependabot

./: .gitmodules  pyproject.toml
.github/: dependabot.yml
.github/workflows/: receive.yml  receive2.yml
