[tool.poetry]
name = "test-test"
version = "0.1.0"
description = ""
authors = ["OpsMill <info@opsmill.com>"]

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
infrahub-sdk = {version = "^1.0.0", extras = ["all"]}
invoke = "^2.1.2"
nornir-infrahub = "^1"
ansible-core = "2.17.7"
netaddr = "^1.3.0"
paramiko = "^3.3.1"
deepmerge = "^2.0"
cvprac = "^1.3.1"
md-toc = "^9.0.0"
treelib = "^1.7.0"
jsonschema = "4.23.0"
# anta = "^0.11.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
